--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-dropdown-picker": "^4.0.2",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
